--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,7 +49,6 @@ android {
         viewBinding true
         dataBinding true
     }
-
 }
 
 dependencies {
@@ -57,6 +56,7 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.drawerlayout:drawerlayout:1.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
