--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,7 @@ android {
     defaultConfig {
         applicationId = "com.example.projektmunka"
         minSdk = 24
+        multiDexEnabled true
         targetSdk = 34
         versionCode = 1
         versionName = "1.0"
@@ -38,8 +39,10 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = JavaVersion.VERSION_17
-        targetCompatibility = JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
+
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = "17"
@@ -111,6 +114,12 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.5'
 
     implementation 'com.google.android.gms:play-services-fitness:21.1.0'  // Use the latest version
+
+    implementation 'me.dm7.barcodescanner:zxing:1.9.13'
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
+    implementation 'androidx.multidex:multidex:2.0.1'
+
 
     constraints {
         implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.8.0") {
