--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         android:theme="@style/Theme.Projektmunka"
         tools:targetApi="31">
         <activity
+            android:name=".NearbyUserActivity"
+            android:exported="false" />
+        <activity
             android:name=".HeartRateActivity"
             android:exported="false" />
         <activity
@@ -53,7 +56,7 @@
             android:exported="false" />
         <activity
             android:name=".RouteDescriptionActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".ForgotPasswordActivity"
             android:exported="false" />
@@ -71,7 +74,7 @@
         </activity>
         <activity
             android:name=".OsmPOIActivity"
-            android:exported="false"></activity>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
