--- a/app/build.gradle
+++ b/app/build.gradle
@@ -102,6 +102,8 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-auth:20.7.0'
 
+    implementation 'no.nordicsemi.android:ble:2.0.1'
+
     // Dagger
     implementation 'com.google.dagger:dagger:2.48.1'
     kapt 'com.google.dagger:dagger-compiler:2.48.1'
@@ -118,6 +120,8 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
     implementation 'androidx.multidex:multidex:2.0.1'
+
+
 
 
     constraints {
