--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,9 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
 
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+
     <application
         android:name=".utils.MyApplication"
         android:allowBackup="true"
@@ -39,6 +42,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Projektmunka"
         tools:targetApi="31">
+        <activity
+            android:name=".ReadHeartRateActvity"
+            android:exported="false" />
         <activity
             android:name=".NearbyUserActivity"
             android:exported="false" />
