--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 
     defaultConfig {
         applicationId = "com.example.projektmunka"
-        minSdk = 24
+        minSdk = 25
         multiDexEnabled true
         targetSdk = 34
         versionCode = 1
@@ -118,6 +118,9 @@ dependencies {
     implementation 'com.journeyapps:zxing-android-embedded:4.3.0'
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
     implementation 'androidx.multidex:multidex:2.0.1'
+
+    // Easy Permissions
+    implementation 'pub.devrel:easypermissions:3.0.0'
 
 
     constraints {
